--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,4 @@ auth_awesomesauce.js
 auth.js
 authChat.js
 authAudience.js
-.idea/DaManagement.iml
-.idea/misc.xml
-.idea/vcs.xml
-.idea/modules.xml
-
+.idea
