- added the country-code-lookup library

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "the_management",
 	"private": true,
 	"dependencies": {
+		"country-code-lookup": "^0.0.19",
 		"google-auth-library": "^7.5.0",
 		"googleapis": "^84.0.0",
 		"ttapi": "^4.0.3"
@@ -9,10 +10,10 @@
 	"devDependencies": {
 		"eslint": "^7.32.0",
 		"prettier": "^2.3.0"
- 	},
-  "scripts": {
-    "lint": "eslint . --ext .js --ignore-pattern node_modules/",
-    "tidy": "prettier . --check",
-    "tidy:fix": "prettier . --fix"
-  }
+	},
+	"scripts": {
+		"lint": "eslint . --ext .js --ignore-pattern node_modules/",
+		"tidy": "prettier . --check",
+		"tidy:fix": "prettier . --fix"
+	}
 }
