--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"dependencies": {
 		"country-code-lookup": "^0.0.19",
+		"dotenv": "^10.0.0",
 		"google-auth-library": "^7.5.0",
 		"googleapis": "^84.0.0",
 		"ttapi": "^4.0.3"
