maybe don't have a broken example .env file huh?!? #facepalm

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ COMMANDIDENTIFIER=/
 # use this bookmarklet to find the IDs for your user & ROOM
 # http://alaingilbert.github.io/Turntable-API/bookmarklet.html
 
-AUTH=xxxxxxxxxxxxxxx //set the auth of your bot here.
-USERID=xxxxxxxxxxxxxxx //set the userid of your bot here.
-ROOMID=xxxxxxxxxxxxxxx //set the roomid of the room you want the bot to go to here.
+# set the auth of your bot here.
+AUTH=xxxxxxxxxxxxxxx
+
+# set the userid of your bot here.
+USERID=xxxxxxxxxxxxxxx
+
+# set the roomid of the room you want the bot to go to here.
+ROOMID=xxxxxxxxxxxxxxx
