- switched to use node-storage so that the aliases file would be reloaded with each use - moved the aliases into their own file and a specific directory for other external data files

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"google-auth-library": "^7.11.0",
 		"googleapis": "^92.0.0",
 		"moment": "^2.29.1",
+		"node-storage": "^0.0.9",
 		"ttapi": "^4.0.3"
 	},
 	"devDependencies": {
