- updated the example .env file with the alias file location - made the alias path a variable - update the packages

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# used to recognise commands sent to the Bot
-COMMANDIDENTIFIER=/
-
+# AUTHENTICATION
 # use this bookmarklet to find the IDs for your user & ROOM
 # http://alaingilbert.github.io/Turntable-API/bookmarklet.html
 
@@ -12,3 +10,11 @@ USERID=xxxxxxxxxxxxxxx
 
 # set the roomid of the room you want the bot to go to here.
 ROOMID=xxxxxxxxxxxxxxx
+
+
+# SETTINGS
+# what character is used to recognise commands sent to the Bot
+COMMANDIDENTIFIER=/
+
+# the filename in the data directory used to store the command aliases
+ALIASDATA=aliases.json
