- added the chat data location to the example .env file - fixed typos - added addChatCommand that will write data to a file using node-storage and checks if the command already exists either as an alias, a core command, or a chat command from the file before writing it

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ COMMANDIDENTIFIER=/
 
 # the filename in the data directory used to store the command aliases
 ALIASDATA=aliases.json
+
+# the filename in the data directory used to store the commands, pictures & messages for chat commands
+CHATDATA=chat.json
