--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
 	"name": "the_management",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.0.0",
 		"country-code-lookup": "^0.0.20",
 		"dotenv": "^14.2.0",
+		"dragula": "^3.7.3",
+		"express": "^4.17.3",
 		"fs": "^0.0.1-security",
 		"google-auth-library": "^7.11.0",
 		"googleapis": "^92.0.0",
 		"moment": "^2.29.1",
 		"node-storage": "^0.0.9",
+		"pug": "^3.0.2",
 		"ttapi": "^4.0.3"
 	},
 	"devDependencies": {
