--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ ALIASDATA=aliases.json
 
 # the filename in the data directory used to store the commands, pictures & messages for chat commands
 CHATDATA=chat.json
+
+# set your YouTube API Key
+YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
