--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"moment": "^2.29.1",
 		"node-storage": "^0.0.9",
 		"pug": "^3.0.2",
+		"request": "^2.88.2",
 		"ttapi": "^4.0.3"
 	},
 	"devDependencies": {
