added link on how to get an api key

--- a/.env.example
+++ b/.env.example
@@ -23,4 +23,5 @@ ALIASDATA=aliases.json
 CHATDATA=chat.json
 
 # set your YouTube API Key
+# info on getting an api key: https://rapidapi.com/blog/how-to-get-youtube-api-key/
 YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
