--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
 		"google-auth-library": "^7.14.1",
 		"googleapis": "^99.0.0",
 		"moment": "^2.29.1",
+		"node-forge": ">=1.3.0",
 		"node-storage": "^0.0.9",
 		"pug": "^3.0.2",
-		"ttapi": "^4.0.3",
-		"node-forge": ">=1.3.0"
+		"request": "^2.88.2",
+		"ttapi": "^4.0.3"
 	},
 	"devDependencies": {
 		"eslint": "^8.12.0",
 		"jest": "^27.5.1",
-		"prettier": "^2.6.1",
-		"node-forge": ">=1.3.0"
+		"node-forge": ">=1.3.0",
+		"prettier": "^2.6.1"
 	},
 	"scripts": {
 		"lint": "eslint . --ext .js --ignore-pattern node_modules/",
