- basic auth added to

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ CHATDATA=chat.json
 # set your YouTube API Key
 # info on getting an api key: https://rapidapi.com/blog/how-to-get-youtube-api-key/
 YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
+
+PLAYLIST_USERNAME=XXXXXXXXXXX
+PLAYLIST_PASSWORD=XXXXXXXXXXX
