- mention the playlist controls in the auth error - getting errors trying to remove then immediately put the date (node-storage can't update so made is an async function...get me!!

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ ALIASDATA=aliases.json
 # the filename in the data directory used to store the commands, pictures & messages for chat commands
 CHATDATA=chat.json
 
+# the filename in the data directory used to store the user data to enable persistence when the bot restarts
+USERDATA=users.json
+
 # set your YouTube API Key
 # info on getting an api key: https://rapidapi.com/blog/how-to-get-youtube-api-key/
 YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
