--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,9 @@ ALIASDATA=aliases.json
 # the filename in the data directory used to store the commands, pictures & messages for chat commands
 CHATDATA=chat.json
 
+# the filename in the data directory used to store the themes used in the randomizer
+THEMEDATA=themes.json
+
 # set your YouTube API Key
 # info on getting an api key: https://rapidapi.com/blog/how-to-get-youtube-api-key/
 YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
