--- a/.env.example
+++ b/.env.example
@@ -28,5 +28,10 @@ THEMEDATA=themes.json
 # info on getting an api key: https://rapidapi.com/blog/how-to-get-youtube-api-key/
 YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
 
+# database access
+DBUSERNAME=XXXXXXXXXXX
+DBPASSWORD=XXXXXXXXXXX
+DBNAME=XXXXXXXXXXX
+
 PLAYLIST_USERNAME=XXXXXXXXXXX
 PLAYLIST_PASSWORD=XXXXXXXXXXX
