--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,9 @@ DBUSERNAME=XXXXXXXXXXX
 DBPASSWORD=XXXXXXXXXXX
 DBNAME=XXXXXXXXXXX
 
+# login for the playlist management pages
 PLAYLIST_USERNAME=XXXXXXXXXXX
 PLAYLIST_PASSWORD=XXXXXXXXXXX
+
+# default avatar for the Bot, can be changed with a command
+AVATARID=x
