add example backup user

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ THEMEDATA=themes.json
 YOUTUBE_API_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXX
 
 # database access
+BACKUPDBUSERNAME=XXXXXXXXXXX
 DBUSERNAME=XXXXXXXXXXX
 DBPASSWORD=XXXXXXXXXXX
 DBNAME=XXXXXXXXXXX
