Add ChatGPT Call

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ DBNAME=XXXXXXXXXXX
 # login for the playlist management pages
 PLAYLIST_USERNAME=XXXXXXXXXXX
 PLAYLIST_PASSWORD=XXXXXXXXXXX
+
+# ML Stuff
+OPENAI_API_KEY=XXXXXXXXXXX
