--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,7 @@ PLAYLIST_PASSWORD=XXXXXXXXXXX
 
 # ML Stuff
 OPENAI_API_KEY=XXXXXXXXXXX
+
+# Discogs keys
+DISCOGS_CONSUMER_KEY=XXXXXXXXXXX
+DISCOGS_CONSUMER_SECRET=XXXXXXXXXXX
