--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,7 @@ OPENAI_API_KEY=XXXXXXXXXXX
 # Discogs keys
 DISCOGS_CONSUMER_KEY=XXXXXXXXXXX
 DISCOGS_CONSUMER_SECRET=XXXXXXXXXXX
+
+# Spotify Auth
+SPOTIFY_CLIENT_ID=xxxxxxxx
+SPOTIFY_CLIENT_SECRET=xxxxxxxxx
