--- a/package.json
+++ b/package.json
@@ -2,26 +2,30 @@
 	"name": "the_management",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.1.2",
-		"country-code-lookup": "^0.0.20",
-		"dotenv": "^16.0.1",
+		"@fortawesome/fontawesome-free": "^6.5.1",
+		"axios": "^1.6.2",
+		"country-code-lookup": "^0.1.0",
+		"dayjs": "^1.11.10",
+		"dotenv": "^16.3.1",
 		"dragula": "^3.7.3",
-		"express": "^4.18.1",
+		"express": "^4.18.2",
 		"fs": "^0.0.1-security",
-		"google-auth-library": "^8.1.1",
-		"googleapis": "^105.0.0",
+		"google-auth-library": "^9.4.1",
+		"googleapis": "^129.0.0",
 		"moment": "^2.29.4",
+		"mysql": "^2.18.1",
 		"node-forge": ">=1.3.1",
 		"node-storage": "^0.0.9",
+		"openai": "^4.20.1",
 		"pug": "^3.0.2",
 		"request": "^2.88.2",
 		"ttapi": "^4.0.3"
 	},
 	"devDependencies": {
-		"eslint": "^8.22.0",
-		"jest": "^28.1.3",
+		"eslint": "^8.55.0",
+		"jest": "^29.7.0",
 		"node-forge": ">=1.3.1",
-		"prettier": "^2.7.1"
+		"prettier": "^3.1.1"
 	},
 	"scripts": {
 		"lint": "eslint . --ext .js --ignore-pattern node_modules/",
