--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.5.1",
 		"axios": "^1.6.2",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
 		"country-code-lookup": "^0.1.0",
 		"dayjs": "^1.11.10",
 		"dotenv": "^16.3.1",
@@ -13,6 +15,7 @@
 		"google-auth-library": "^9.4.1",
 		"googleapis": "^129.0.0",
 		"moment": "^2.29.4",
+		"morgan": "^1.10.0",
 		"mysql": "^2.18.1",
 		"node-forge": ">=1.3.1",
 		"node-storage": "^0.0.9",
